Bug fixed - Mobile have text intermittently changing flow of wrapping because of changing heights at the carousel active item

--- a/src/assets/js/Components/WhoAmI.css
+++ b/src/assets/js/Components/WhoAmI.css
@@ -164,6 +164,12 @@ h3 {
 .yt-gallery-header a:hover {
     color: #FF0000 !important;
 }
+
+.carousel-item img {
+    width: 339px;
+    height: 179px;
+}
+
 .carousel-control-prev, .carousel-control-next {
     margin-bottom:30px;
 }
